force-app/main/default/objects/TAXDeclaration__c/fields/BankAccountForPayment__c.field-meta.xml
<CustomField>
    <fullName>BankAccountForPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR PAYMENT</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>TAX DECLARATION</relationshipLabel>
    <relationshipName>TaxDeclaration</relationshipName>
    <type>Lookup</type>
</CustomField>