force-app/main/default/objects/TAXDeclaration__c/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <label>INSURANCE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>ObiligationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>InsuranceType</valueSetName>
    </valueSet>
</CustomField>