force-app/main/default/objects/TAXDeclaration__c/fields/ObligationName__c.field-meta.xml
<CustomField>
    <fullName>ObligationName__c</fullName>
    <label>OBLIGATION NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>