force-app/main/default/objects/TAXDeclaration__c/fields/OpeingBalance__c.field-meta.xml
<CustomField>
    <fullName>OpeingBalance__c</fullName>
    <label>OPENING BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>