force-app/main/default/objects/TAXDeclaration__c/fields/OpeningBalanceCredit__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceCredit__c</fullName>
    <label>OPENING BALANCE-CREDIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>