force-app/main/default/objects/TAXDeclaration__c/fields/PaidForThePeriod__c.field-meta.xml
<CustomField>
    <fullName>PaidForThePeriod__c</fullName>
    <label>PAID FOR THE PERIOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>