force-app/main/default/objects/TAXDeclaration__c/fields/PaidYearToDate__c.field-meta.xml
<CustomField>
    <fullName>PaidYearToDate__c</fullName>
    <label>PAID YEAR TO DATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>