force-app/main/default/objects/TAXDeclaration__c/fields/PayableForPeriod__c.field-meta.xml
<CustomField>
    <fullName>PayableForPeriod__c</fullName>
    <label>PAYABLE FOR PERIOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>