force-app/main/default/objects/TAXDeclaration__c/fields/PaymentNote__c.field-meta.xml
<CustomField>
    <fullName>PaymentNote__c</fullName>
    <label>PAYMENT NOTE</label>
    <type>TextArea</type>
</CustomField>