force-app/main/default/objects/TAXDeclaration__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>PAYMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>