force-app/main/default/objects/TAXDeclaration__c/fields/PreviousObligationDeclarationID__c.field-meta.xml
<CustomField>
    <fullName>PreviousObligationDeclarationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS OBLIGATION DECLARATION ID</label>
    <referenceTo>TAXDeclaration__c</referenceTo>
    <relationshipLabel>NEXT OBLIGATION DECLARATION</relationshipLabel>
    <relationshipName>PreviousObligationDeclarationID</relationshipName>
    <type>Lookup</type>
</CustomField>