force-app/main/default/objects/TAXDeclaration__c/fields/RemainedBalance__c.field-meta.xml
<CustomField>
    <fullName>RemainedBalance__c</fullName>
    <label>REMAINED BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>