force-app/main/default/objects/TAXDeclaration__c/fields/RollupCreditTransaction__c.field-meta.xml
<CustomField>
    <fullName>RollupCreditTransaction__c</fullName>
    <label>ROLLUP CREDIT TRANSACTION</label>
    <summarizedField>ACBalanceObligation__c.CreditTransactionObligation__c</summarizedField>
    <summaryForeignKey>ACBalanceObligation__c.TaxDeclarationID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>