force-app/main/default/objects/TAXDeclaration__c/fields/TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>TaxCategory__c</fullName>
    <label>TAX CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>ObiligationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>TaxCategory</valueSetName>
    </valueSet>
</CustomField>