force-app/main/default/objects/TAXDeclaration__c/fields/TransactionBalanceCredit__c.field-meta.xml
<CustomField>
    <fullName>TransactionBalanceCredit__c</fullName>
    <label>TRANSACTION BALANCE-CREDIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>