force-app/main/default/objects/TAXDeclaration__c/fields/TransactionBalanceDebit__c.field-meta.xml
<CustomField>
    <fullName>TransactionBalanceDebit__c</fullName>
    <label>TRANSACTION BALANCE-DEBIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>