force-app/main/default/objects/TAXDeclaration__c/recordTypes/InsuranceDeclaration.recordType-meta.xml
<RecordType>
    <fullName>InsuranceDeclaration</fullName>
    <active>true</active>
    <label>Insurance Declaration</label>
</RecordType>