force-app/main/default/objects/TAXDeclaration__c/listViews/TaxObligationWithGovernment.listView-meta.xml
<ListView>
    <fullName>TaxObligationWithGovernment</fullName>
    <columns>TaxCategory__c</columns>
    <columns>NAME</columns>
    <columns>ObligationName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ObiligationType__c</columns>
    <columns>PreviousObligationDeclarationID__c</columns>
    <columns>OpeingBalance__c</columns>
    <columns>OpeningBalanceCredit__c</columns>
    <columns>TransactionBalanceDebit__c</columns>
    <columns>TransactionBalanceCredit__c</columns>
    <columns>PayableForPeriod__c</columns>
    <columns>ClosingBalance__c</columns>
    <columns>ClosingBalanceCredit__c</columns>
    <columns>PaidForThePeriod__c</columns>
    <columns>RemainedBalance__c</columns>
    <filterScope>Everything</filterScope>
    <label>TAX OBLIGATION WITH GOVERNMENT</label>
    <language>en_US</language>
</ListView>